# Ithemal

./: .gitattributes  .gitignore  .gitmodules  .gitshared  Dockerfile  LICENSE  README.md  _docker_utils.sh  build_all.sh  build_dynamorio.sh  build_stoke.sh  build_zsim.sh  docker-compose.yml  docker_build.sh  docker_connect.sh  docker_my.cnf  docker_stop.sh  requirements.txt  setup.sh  stoke_knowledge.txt
apithemal/: apithemal.py  run.sh
assembly/: change_opcode.h  getdiffopcodes.py  opcode.att  opcode.intel
aws/: README.md  command_queue.py  connect_instance.py  instance_utils.py  ping_slack.py  queue.py  remote_setup.sh  start_instance.py  stop_instance.py  synchronize_files.py  tmux_attach.sh
common/: .gitignore  setup.py  utilities.py
data_augmentation/: test_func_unit.py
data_collection/: .gitignore  CMakeLists.txt  build_dynamorio.sh  extract.py
data_collection/disassembler/: .gitignore  CMakeLists.txt  disassemble.c  disassemble.cpp  disassemble.h  disassembler.cpp  disassembler.h  test-disasm.cpp
data_export/: .gitignore  create_and_populate_db.sh  offsets.txt  populate_database.sh  temp.sh
database/: create_and_populate_db.sh  create_and_populate_db_2.sh  data_linter.py  mysql_reduced.sql  mysql_schema.sql  mysql_schema_2.sql  mysql_schema_bin.sql  populate_database.sh  update_database.sh  update_schema.sql
docker/: Dockerfile  README.md  _docker_utils.sh  docker-compose.yml  docker_build.sh  docker_build_aws.sh  docker_connect.sh  docker_my.cnf  env  notebook_config.patch
drclients/: CMakeLists.txt  README.md  mmap.h  mmap_test.c  snoop.c  (+2 more)
(+352 files in other folders)
